# media-optimizer

./: .editorconfig  .gitignore  DEVELOPMENT.md  LICENSE  README.md  devtools.py  media_optimizer.py  media_optimizer.spec  pyproject.toml  setup.cfg
src/: _version.py  devhelpers.py  pictures.py  videos.py
src/components/: app.py  ffmpeg.py  ffmpeg_types.py  files.py  media_optimizer.py  options.py  stdout.py
src/devtools/: build.py  licenses.py  version.py
src/optimizers/: pictures.py  videos.py
src/typings/ffmpeg/: __init__.pyi  _ffmpeg.pyi  ffmpeg.pyi  nodes.pyi  progress.pyi
